--- a/contact.html
+++ b/contact.html
@@ -125,27 +125,27 @@
                     <div class="bg-white border border-top-0 p-4 mb-3">
                         <div class="mb-4">
                             <h6 class="text-uppercase font-weight-bold">Contact Info</h6>
-                            <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                            <p class="mb-4">Website ini dikerjakan bersama-sama anggota kelompok MieChat, dengan menggunakan template yang ada di google, dan kita menggunakan ATM(Analisis Tiru dan Modifikasi)</a>.</p>
 							<div class="mb-3">
                                 <div class="d-flex align-items-center mb-2">
                                     <i class="fa fa-map-marker-alt text-primary mr-2"></i>
                                     <h6 class="font-weight-bold mb-0">Our Office</h6>
                                 </div>
-                                <p class="m-0">123 Street, New York, USA</p>
+                                <p class="m-0">FTI UKSW, Salatiga, Indonesia</p>
                             </div>
                             <div class="mb-3">
                                 <div class="d-flex align-items-center mb-2">
                                     <i class="fa fa-envelope-open text-primary mr-2"></i>
                                     <h6 class="font-weight-bold mb-0">Email Us</h6>
                                 </div>
-                                <p class="m-0">info@example.com</p>
+                                <p class="m-0">ernestgloriusdeo@gmail.com</p>
                             </div>
                             <div class="mb-3">
                                 <div class="d-flex align-items-center mb-2">
                                     <i class="fa fa-phone-alt text-primary mr-2"></i>
                                     <h6 class="font-weight-bold mb-0">Call Us</h6>
                                 </div>
-                                <p class="m-0">+012 345 6789</p>
+                                <p class="m-0">012345678910</p>
                             </div>
                         </div>
                         <h6 class="text-uppercase font-weight-bold mb-3">Contact Us</h6>
@@ -248,9 +248,9 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="mb-4 text-white text-uppercase font-weight-bold">Categories</h5>
                 <div class="m-n1">
-                    <a href="" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
-                    <a href="" class="btn btn-sm btn-secondary m-1">Badminton</a>
-                    <a href="" class="btn btn-sm btn-secondary m-1">MotoGP</a>
+                    <a href="category.html" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
+                    <a href="catBadmin.html" class="btn btn-sm btn-secondary m-1">Badminton</a>
+                    <a href="catMotogp.html" class="btn btn-sm btn-secondary m-1">MotoGP</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -264,6 +264,15 @@
                     </div>
                     <div class="col-4 mb-3">
                         <a href=""><img class="w-100" src="imgg/valencia.jpeg" alt=""></a>
+                    </div>
+                    <div class="col-4 mb-3">
+                        <a href=""><img class="w-100" src="imgg/onana.jpg" alt=""></a>
+                    </div>
+                    <div class="col-4 mb-3">
+                        <a href=""><img class="w-100" src="imgg/duo joao.jpeg" alt=""></a>
+                    </div>
+                    <div class="col-4 mb-3">
+                        <a href=""><img class="w-100" src="imgg/gregoria-mariska-tunjung-1.jpeg" alt=""></a>
                     </div>
                     
                 </div>
