--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -84,6 +85,11 @@
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
+                                <!-- Dark Mode Toggle Button -->
+            <div class="form-check form-switch">
+            <input type="checkbox" class="custom-control-input" id="darkModeToggle">
+            <label class="custom-control-label text-white" for="darkModeToggle">Dark Mode</label>
+        </div>
             <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav mr-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
@@ -98,6 +104,7 @@
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
+
                 </div>
                
             </div>
@@ -441,9 +448,9 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <h5 class="mb-4 text-white text-uppercase font-weight-bold">Categories</h5>
             <div class="m-n1">
-                <a href="" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
-                <a href="" class="btn btn-sm btn-secondary m-1">Badminton</a>
-                <a href="" class="btn btn-sm btn-secondary m-1">MotoGP</a>
+                <a href="category.html" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
+                <a href="catBadmin.html" class="btn btn-sm btn-secondary m-1">Badminton</a>
+                <a href="catMotogp.html" class="btn btn-sm btn-secondary m-1">MotoGP</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
@@ -457,6 +464,15 @@
                 </div>
                 <div class="col-4 mb-3">
                     <a href=""><img class="w-100" src="imgg/valencia.jpeg" alt=""></a>
+                </div>
+                <div class="col-4 mb-3">
+                    <a href=""><img class="w-100" src="imgg/onana.jpg" alt=""></a>
+                </div>
+                <div class="col-4 mb-3">
+                    <a href=""><img class="w-100" src="imgg/duo joao.jpeg" alt=""></a>
+                </div>
+                <div class="col-4 mb-3">
+                    <a href=""><img class="w-100" src="imgg/gregoria-mariska-tunjung-1.jpeg" alt=""></a>
                 </div>
                 
             </div>
