--- a/single.html
+++ b/single.html
@@ -31,18 +31,15 @@
         <div class="row align-items-center bg-dark px-lg-5">
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-sm bg-dark p-0">
-                    <ul class="navbar-nav ml-n2">
+                    <ul class="navbar-nav ml-n2">  
                         <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">Monday, January 1, 2045</a>
+                            <a class="nav-link text-body small" href="index.html">Home</a>
                         </li>
                         <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">Advertise</a>
-                        </li>
-                        <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">Contact</a>
+                            <a class="nav-link text-body small" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-body small" href="#">Login</a>
+                            <a class="nav-link text-body small" href="form login dan registrasi-biru/index.html">Login</a>
                         </li>
                     </ul>
                 </nav>
@@ -187,7 +184,7 @@
                         <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle mr-2" src="imgg/pep-guardiola.jpeg" width="25" height="25" alt="">
-                                <span>Krido </span>
+                                <span>Oktomigo </span>
                             </div>
                             <div class="d-flex align-items-center">
                                 <span class="ml-3"><i class="far fa-eye mr-2"></i>13</span>
@@ -348,9 +345,9 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="mb-4 text-white text-uppercase font-weight-bold">Categories</h5>
                 <div class="m-n1">
-                    <a href="" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
-                    <a href="" class="btn btn-sm btn-secondary m-1">Badminton</a>
-                    <a href="" class="btn btn-sm btn-secondary m-1">MotoGP</a>
+                    <a href="category.html" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
+                    <a href="catBadmin.html" class="btn btn-sm btn-secondary m-1">Badminton</a>
+                    <a href="catMotogp.html" class="btn btn-sm btn-secondary m-1">MotoGP</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -364,6 +361,15 @@
                     </div>
                     <div class="col-4 mb-3">
                         <a href=""><img class="w-100" src="imgg/valencia.jpeg" alt=""></a>
+                    </div>
+                    <div class="col-4 mb-3">
+                        <a href=""><img class="w-100" src="imgg/onana.jpg" alt=""></a>
+                    </div>
+                    <div class="col-4 mb-3">
+                        <a href=""><img class="w-100" src="imgg/duo joao.jpeg" alt=""></a>
+                    </div>
+                    <div class="col-4 mb-3">
+                        <a href=""><img class="w-100" src="imgg/gregoria-mariska-tunjung-1.jpeg" alt=""></a>
                     </div>
                     
                 </div>
