--- a/football.html
+++ b/football.html
@@ -177,9 +177,9 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="mb-4 text-white text-uppercase font-weight-bold">Categories</h5>
                 <div class="m-n1">
-                    <a href="" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
-                    <a href="" class="btn btn-sm btn-secondary m-1">Badminton</a>
-                    <a href="" class="btn btn-sm btn-secondary m-1">MotoGP</a>
+                    <a href="category.html" class="btn btn-sm btn-secondary m-1">Sepak Bola</a>
+                    <a href="catBadmin.html" class="btn btn-sm btn-secondary m-1">Badminton</a>
+                    <a href="catMotogp.html" class="btn btn-sm btn-secondary m-1">MotoGP</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
